# pyrdping

./: Makefile  REAMDE.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
src/pyfreerdp/: bind.c
